--- a/IRIS/class/Classprofessor.cls
+++ b/IRIS/class/Classprofessor.cls
@@ -2,7 +2,7 @@ Class Faculdade.Classprofessor Extends %Persistent
 {
 
 /// Description
-Property Name As %String;
+Property Name As %String [ Required ];
 
 Query professores() As %SQLQuery [ SqlView ]
 {
